--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>Fancy weather</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.css" rel="stylesheet" />
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.js"></script>
 </head>
 <body>
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
